--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,26 @@ html, body {
   background-size: cover;
 }
 
+#launch {
+  font-weight: bold;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.logo{
+  width: 50px;
+  height: 50px;
+}
 
 .navbar-nav > li > a:hover, .navbar-nav > li > a:focus{
   background: none;
-  color: dodgerblue;
+  color: #3076d0;
 }
 
 .navbar-nav > li > a {
