--- a/css/main.css
+++ b/css/main.css
@@ -217,6 +217,11 @@ nav {
 .work-header-container {
   margin-bottom: 50px;
   text-align: center;
+  padding: 0;
+}
+
+.work-header-container ul {
+  padding: 0;
 }
 
 .hide {
@@ -233,8 +238,8 @@ nav {
 }
 
 .selected {
-  color:#1d5d8f;
-  border-bottom: 1px solid #1d5d8f;
+  color:dodgerblue;
+  border-bottom: 1px solid dodgerblue;
   top: -10;
   transition: all 0.4s;
 }
@@ -243,12 +248,13 @@ nav {
   background: #fff;
   width: 250px;
   height: 200px;
-  margin-right: 15px;
-  margin-top: 10px;
+  margin-right: 10px;
+  margin-top: 15px;
 }
 
-.arrow-up {
+.arrow-up a{
   font-size:25px;
+  color: white;
 }
 
 .contact-btn {
