--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,24 @@ nav {
   margin-top: 15px;
 }
 
+.team-member {
+  margin: auto;
+  text-align: center;
+}
+
+.name {
+  color: #fff;
+  font-size:18px;
+  text-transform: uppercase;
+  margin-top: 10px;
+}
+
+.subtext {
+  font-size:12px;
+  color:#fff;
+  margin-top: 3px;
+}
+
 .arrow-up a{
   font-size:25px;
   color: white;
