--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,10 @@ nav {
   padding-bottom:50px;
 }
 
+.team-page-container {
+  margin-top: 100px;
+}
+
 .team-head {
   margin-top: 30px;
 }
@@ -313,6 +317,8 @@ hr{
   margin-right: 15px;
   font-size:17px;
 }
+
+
 
 .footer-logo img{
   width: 50px;
