Added data to team page

--- a/css/main.css
+++ b/css/main.css
@@ -257,6 +257,17 @@ nav {
   text-align: center;
 }
 
+.member-image {
+
+}
+
+.member-image img{
+  background: #fff;
+  border-radius: 100%;
+  width: 220px;
+  height: 220px;
+}
+
 .name {
   color: #fff;
   font-size:18px;
