--- a/css/main.css
+++ b/css/main.css
@@ -240,13 +240,36 @@ nav {
   transition: all 0.4s;
 }
 
-.work-image {
-  background: #fff;
-  width: 250px;
-  height: 200px;
-  margin-right: 10px;
-  margin-top: 15px;
+/* NEW WORK SECTION ATTEMPT TO KEEP ASPECT RATIO OF IMAGES AND GRID */
+
+.work-images {
+  margin: 0 auto;
 }
+
+.work-image {
+  display: inline-block;
+    width: 500px;
+    height:400px;
+    overflow:hidden;
+    margin-top: 30px;
+    margin-right: 30px;
+    transition: all .2s ease-in-out;
+}
+
+.work-image:hover {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scaleX(1.3);
+  transform: scale(1.3);
+}
+
+.work-image img {
+    display: block;
+    width:100%;
+    height: 400px;
+
+}
+
 
 .team-member {
   margin: auto;
