--- a/css/main.css
+++ b/css/main.css
@@ -259,19 +259,52 @@ nav {
     margin-right: 30px;
     transition: all .2s ease-in-out;
 }
-
+/*
 .work-image:hover {
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
   transform: scaleX(1.3);
   transform: scale(1.3);
 }
-
+*/
 .work-image img {
     display: block;
     width:100%;
     height: 400px;
+    z-index: 3;
 
+}
+
+.overlay {
+  visibility: hidden;
+  display: none;
+
+
+
+}
+
+.overlay h4 {
+  visibility: hidden;
+
+}
+
+.overlay.shown {
+  display: block;
+  visibility: visible;
+  position: absolute;
+  opacity: 0.8;
+  background-color: #000;
+  height: 400px;
+  width: 500px;
+}
+
+.overlay h4.shown {
+  display: block;
+  visibility: visible;
+  position: relative;
+  top: 50%;
+  opacity: 1;
+  color: dodgerblue;
 }
 
 
