--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,10 @@ nav {
   text-transform: uppercase;
 }
 
+.member img {
+  border: 2px solid dodgerblue;
+}
+
 .selected {
   color:dodgerblue;
   border-bottom: 1px solid dodgerblue;
@@ -313,8 +317,8 @@ nav {
   text-align: center;
 }
 
-.member-image {
-
+.member {
+  padding: 10px;
 }
 
 .member-image img{
@@ -322,6 +326,7 @@ nav {
   border-radius: 100%;
   width: 220px;
   height: 220px;
+  border: 2px solid dodgerblue;
 }
 
 .name {
@@ -436,8 +441,8 @@ h1 {
 
 .member img{
   width: 50%;
-  border-radius: 50%;
-  padding-bottom: 10px;
+  border-radius: 100%;
+
 
 }
 
